--- a/asset/styles/style.css
+++ b/asset/styles/style.css
@@ -59,16 +59,14 @@ header.navbar-container .nav-list li a {
 
 main {
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  
+  flex-flow: row wrap;
   padding: 1rem 2rem;
   font-family: "Quicksand", serif;
 }
 
-main .headline-container .headline-content {
-  position: relative;
-  display: flex;
-  justify-content: center;
+main .headline-container{
+  width: 100%;
 }
 
 main .headline-container .headline-content img {
@@ -79,10 +77,10 @@ main .headline-container .headline-content img {
 
 main .headline-container .headline-content .headline-text {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -104,7 +102,7 @@ main .content .card {
   border: 1px solid black;
   margin: 10px 20px;
   margin-left: 0;
-  width: 300px;
+  width: 200px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -112,7 +110,7 @@ main .content .card {
 
 main .content .card a img {
   width: 100%;
-  max-height: 200px;
+  max-height: 150px;
 }
 
 main .content .card .card-text {
@@ -123,4 +121,34 @@ main .content .card .card-text h2 a {
   text-decoration: none;
   color: black;
   font-weight: 700;
+}
+
+main aside {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  margin: 1rem 0;
+}
+
+main aside .sidebar-card {
+  border: 1px solid black;
+  margin: 20px;
+  margin-left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+main aside .sidebar-card a img {
+  width: 100%;
+  max-height: 200px;
+}
+
+footer {
+  text-align: center;
+  font-weight: bold;
+  padding: 20px;
+  color: white;
+  background-color: #986b4a;
 }
